[package]
name = "tokio-ping"
version = "0.3.0"
license = "MIT/Apache-2.0"
authors = ["Fedor Gogolev <knsd@knsd.net>"]
documentation = "https://docs.rs/tokio-ping"
repository = "https://github.com/knsd/tokio-ping"
description = "Asynchronous ICMP pinging library"
keywords = ["tokio", "icmp", "ping"]
categories = ["network-programming", "asynchronous"]
edition = "2018"

[dependencies]
failure = "0.1.1"
futures = "0.3.1"
libc = "0.2"
mio = "0.6"
rand = "0.4"
socket2 = "0.3"
tokio = { version = "0.2.4", features = ["rt-core", "io-driver", "time"] }
parking_lot = "0.5.5"

[dev-dependencies]
tokio = { version = "0.2.4", features = ["rt-core", "io-driver", "time", "macros"] }
